"Added Geolocation Service to weatherapp Homepage"

--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--THIS IS THE FILE BEING USED FOR HOMEPAGE, NOT IN weatherapp/templates-->
 <html lang=“en”>
 <head>
 <meta charset=“UTF-8”>
@@ -13,5 +14,43 @@
 <input type=“submit” name=“send” value=“Search”>
 </form>
 </div>
+<!----- Geolocation Javascript issue #29 ----->
+<button id = "find-me">Show my location</button><br/>
+<p id = "status"></p>
+<a id = "map-link" target="_blank"></a>
 </body>
+<!----- Geolocation Javascript issue #29 ----->
+<script>
+function geoFindMe() {
+
+const status = document.querySelector('#status');
+const mapLink = document.querySelector('#map-link');
+
+mapLink.href = '';
+mapLink.textContent = '';
+
+function success(position) {
+  const latitude  = position.coords.latitude;
+  const longitude = position.coords.longitude;
+
+  status.textContent = '';
+  mapLink.href = `https://www.openstreetmap.org/#map=18/${latitude}/${longitude}`;
+  mapLink.textContent = `Latitude: ${latitude} °, Longitude: ${longitude} °`;
+}
+
+function error() {
+  status.textContent = 'Unable to retrieve your location';
+}
+
+if(!navigator.geolocation) {
+  status.textContent = 'Geolocation is not supported by your browser';
+} else {
+  status.textContent = 'Locating…';
+  navigator.geolocation.getCurrentPosition(success, error);
+}
+
+}
+
+document.querySelector('#find-me').addEventListener('click', geoFindMe);
+</script>
 </html>
