i designed the front end sample and added css file

--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -6,9 +6,47 @@
   <meta charset=“UTF-8”>
   <title>WeatherApp</title>
   <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”>
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+
+ <h2 style="text-align:center">Weatherman</h2>
+
+  <div class="search-box" align="center">
+      <input type="text" id="txtbox" class="search-bar" placeholder="Search...">
+    </div>
+  </div>
+
+  <div class="location-box" align="center">
+    <div class="location"> City Name</div>
+    <div class="date">---------Get day date month here---------
+    </div>
+  </div>
+
+  <div class="weather-box" align="center">
+    <div class="weather-image" align="center">
+      <img src="sunny.png">
+    </div>
+    <div class="weather">
+      Sunny
+    </div>
+    <div class="temp">
+      27'c
+    </div>
+  
+  </div>
+
+
+
+
+
+
+
+
+
+
+
   <div align=“center”>
     <h1>Weather in your city</h1>
     <form action=“” method=“get”>
