--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -7,7 +7,7 @@
   <meta charset=“UTF-8”>
   <title>WeatherApp</title>
   <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
 
 <body>
