--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -19,8 +19,6 @@
 </head>
 
 <body>
-  <!-- <div style="background-image: url({% static 'img/background_img.jpg' %});"> -->
-
  <h2 class="title">Weatherman</h2>
 
   <div class="search-box" align="center">
@@ -221,10 +219,15 @@
 
   }
 
-  document.querySelector('#weather-me').addEventListener('click', geoWeatherMe);
-    // document.querySelector('#weather-me').addEventListener('click', geoWeatherMe);
+    document.querySelector('#weather-me').addEventListener('click', geoWeatherMe);
     // document.querySelector('#weather-me').addEventListener('DOMContentLoaded', geoWeatherMe);
 
+
+if (document.readyState === 'loading') {  // Loading hasn't finished yet
+  document.addEventListener('DOMContentLoaded', geoWeatherMe);
+} else {  // `DOMContentLoaded` has already fired
+  geoWeatherMe();
+}
 
 
 </script>
