--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -39,8 +39,7 @@
   <div class="weather-box">
     <div class="weather-image" align="center">
     </div>
-    <!-- <div class="weather"></div>
-    <div class="temp"></div> -->
+    <button class="weather"></button>
   </div>
 
   <div class="weather-aspect" align="center">
@@ -160,7 +159,7 @@
     else
       formattedTime = formattedTime + ' AM';
 
-    console.log(formattedTime);
+    // console.log(formattedTime);
     return formattedTime;
   }
 </script>
@@ -188,6 +187,8 @@
       weatherLink.href = `https://api.openweathermap.org/data/2.5/onecall?lat=${latitude}&lon=${longitude}&appid=9d65df0e73d8ab48d9ea132aaa9a6324&units=imperial`;
       weatherLocation.textContent = '';
       locationLink.href = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=9d65df0e73d8ab48d9ea132aaa9a6324&units=imperial`;
+      let temp_unitF = "F";
+      let temp_unitC = "C";
       (async () => {
         const res = await fetch(weatherLink.href, {
           headers: { Accept: 'application/json' },
@@ -196,12 +197,14 @@
         Object.entries(json["current"]).forEach(([key, value]) => {
           if (key != "weather") {
             // console.log(`${key}: ${value}`);
-            var span = document.createElement('span');
+            // var button = document.createElement('button');
+            var button = document.querySelector('.weather');
             if (key == "temp") {
-              span.className = "weather";
-              document.querySelector('.weather-box').appendChild(span);
+              let deg = "°";
+              document.querySelector('.weather-box').appendChild(button);
               document.querySelector('.weather-box').appendChild(document.createElement('br'));
-              span.innerHTML = `${value}`;
+              let temp_deg = `${value}${deg}`;
+              button.innerHTML = [temp_deg, temp_unitF].join(' ');
             }
             else if (key == "sunset" || key == "sunrise" || key == "dt") {
               var p = document.createElement('p');
@@ -225,8 +228,8 @@
           }
         });
       })();
-    
-    (async () => {
+
+      (async () => {
         const res = await fetch(locationLink.href, {
           headers: { Accept: 'application/json' },
         });
@@ -249,52 +252,61 @@
     }
 
   }
-
-  document.querySelector('#weather-me').addEventListener('click', geoWeatherMe);
-  // document.querySelector('#weather-me').addEventListener('DOMContentLoaded', geoWeatherMe);
-
-
   if (document.readyState === 'loading') {  // Loading hasn't finished yet
     document.addEventListener('DOMContentLoaded', geoWeatherMe);
   } else {  // `DOMContentLoaded` has already fired
     geoWeatherMe();
+
   }
 
 
 </script>
 <script>
-function updateClock() {
-      var now = new Date(),
-      months = ['January', 'February', '...'];
-      var hours = now.getHours();
-      var mins = now.getMinutes();
-      var secs = now.getSeconds();
-      if (mins < 10){mins = "0"+mins;} 
-      if (secs < 10){secs = "0"+secs;}
-
-      // date = [now.getDate(), 
-      //         months[now.getMonth()],
-      //         now.getFullYear()].join(' ');
-      time = hours + ':' + mins +  ':' + secs;
-      date = now.toString().substr(0,16);
-      if (hours > 12) {
-        hours = hours - 12;
-        let pm = "PM";
-        time = [time, pm].join(' ');
-        log.console.log(typeof time);
-      } else {
-        let am = "AM";
-        time = [time, am].join(' ');
+  document.addEventListener("DOMContentLoaded", function () {
+    const weather_button = document.querySelector('.weather');
+    weather_button.addEventListener('click', function () {
+      // alert("Click");
+      if (weather_button.innerHTML[7] == "F") {
+        weather_button.innerHTML = weather_button.innerHTML.replace("F", "C");
       }
-  
-  document.getElementById('time').innerHTML = [date, time ].join('');
-  document.getElementById('time').style.color="white";
-  document.getElementById('time').style.color="white";
-  document.getElementById('time').style.fontSize="20px";
-  document.getElementById('time').style.textShadow="2px 2px rgba(50, 50, 70, 0.5)";
+      else {
+        weather_button.innerHTML = weather_button.innerHTML.replace("C", "F");
+      }
+    });
+  });
 
-  setTimeout(updateClock, 1000);
-}
-updateClock(); // initial call
 </script>
+<script>
+  function updateClock() {
+    var now = new Date(),
+      months = ['January', 'February', '...'];
+    var hours = now.getHours();
+    var mins = now.getMinutes();
+    var secs = now.getSeconds();
+    if (mins < 10) { mins = "0" + mins; }
+    if (secs < 10) { secs = "0" + secs; }
+
+    time = hours + ':' + mins + ':' + secs;
+    date = now.toString().substr(0, 16);
+    if (hours > 12) {
+      hours = hours - 12;
+      let pm = "PM";
+      time = [time, pm].join(' ');
+      log.console.log(typeof time);
+    } else {
+      let am = "AM";
+      time = [time, am].join(' ');
+    }
+
+    document.getElementById('time').innerHTML = [date, time].join('');
+    document.getElementById('time').style.color = "white";
+    document.getElementById('time').style.color = "white";
+    document.getElementById('time').style.fontSize = "20px";
+    document.getElementById('time').style.textShadow = "2px 2px rgba(50, 50, 70, 0.5)";
+
+    setTimeout(updateClock, 1000);
+  }
+  updateClock(); // initial call
+</script>
+
 </html>
