Removed original/test buttons from page for location and weather

--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -81,18 +81,18 @@
 
 
 
-  <div align=“center”>
+  <!-- <div align=“center”>
     <form action=“” method=“get”>
       <input type=“text” id=“city” name=“city” placeholder=“Enter city”>
       <input type=“submit” name=“send” value=“Search”>
     </form>
-  </div>
+  </div> -->
   <!----- Geolocation Javascript issue #29 ----->
-  <button id="find-me">Show My Location</button><br />
+  <!-- <button id="find-me">Show My Location</button><br /> -->
   <p id="status"></p>
   <a id="map-link" target="_blank"></a>
 
-  <button id="weather-me">Show Weather for My Location!</button><br />
+   <!-- <button id="weather-me">Show Weather for My Location!</button><br /> -->
   <p id="weather-status"></p>
   <a id="weather-link" target="_blank"></a>
   <p id="weather-location"></p>
