--- a/templates/weatherapp.html
+++ b/templates/weatherapp.html
@@ -8,6 +8,26 @@
   <title>WeatherApp</title>
   <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”>
   <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  <!----------------- MDN Boostrap CDN------------------>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+  <!-- JQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+  <!----------------- MDN Boostrap CDN------------------>
   <style>
     body {
       background-image: url('{% static 'img/background_img.jpg' %}');
@@ -37,10 +57,15 @@
   </div>
 
   <div class="weather-box">
-    <div class="weather-image" align="center">
-    </div>
-    <button class="weather"></button>
+    <button class="btn purple-gradient btn-rounded btn-hover weather animated zoomIn"></button>
   </div>
+<!-- 
+<div class="view overlay">
+  <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid " alt="smaple image">
+  <div class="mask flex-center rgba-red-strong">
+      <p class="white-text">Strong overlay</p>
+  </div>
+</div> -->
 
   <div class="weather-aspect" align="center">
     <div class="sunrise">
@@ -51,7 +76,6 @@
     <div class="wind">
       <img src="{% static 'img/windy.png' %}" alt="wind" style="width:25%" class="air">
       <p>Wind</p>
-      <p>data here</p>
       <p>data here</p>
       <p>data here</p>
     </div>
@@ -92,18 +116,18 @@
   <p id="status"></p>
   <a id="map-link" target="_blank"></a>
 
-   <!-- <button id="weather-me">Show Weather for My Location!</button><br /> -->
+  <!-- <button id="weather-me">Show Weather for My Location!</button><br /> -->
   <p id="weather-status"></p>
   <a id="weather-link" target="_blank"></a>
   <p id="weather-location"></p>
   <a id="location-link" target="_blank"></a>
 
-  <div class="google-text-block">
+  <!-- <div class="google-text-block">
     <span class="users-numb"></span>
     <br>
     <span class="numb"></span>
   </div>
-</body>
+</body> -->
 <!----- Geolocation Javascript issue #29 ----->
 <script>
   function geoFindMe() {
@@ -136,7 +160,7 @@
 
   }
 
-  document.querySelector('#find-me').addEventListener('click', geoFindMe);
+  // document.querySelector('#find-me').addEventListener('click', geoFindMe);
 </script>
 <!--Sunrise/Sunset UNIX TIME CONVERSION-->
 <script>
@@ -200,9 +224,10 @@
         const json = await res.json();
         Object.entries(json["current"]).forEach(([key, value]) => {
           if (key != "weather") {
-            // console.log(`${key}: ${value}`);
-            // var button = document.createElement('button');
             var button = document.querySelector('.weather');
+            if (button) {
+              document.querySelector('.weather').replaceWith(document.querySelector('.weather'))
+            }
             if (key == "temp") {
               let deg = "°";
               let temp_deg = `${value}${deg}`;
@@ -243,8 +268,7 @@
               document.querySelector(".wind").children[3].innerHTML = `${key}: ${value}`;
             }
             else if (key == "wind_gust") {
-              document.querySelector(".wind").children[4].innerHTML = `${key}: ${value}`;
-
+              document.querySelector(".wind").children[4].innerHTML = `${key}: ${value}`;              
             }
           }
 
@@ -276,11 +300,8 @@
   if (document.readyState === 'loading') {  // Loading hasn't finished yet
     document.addEventListener('DOMContentLoaded', geoWeatherMe);
     geoWeatherMe.unit = "imperial";
-    // console.log("Not loaded inside: " + geoWeatherMe.unit);
   } else {  // `DOMContentLoaded` has already fired
     geoWeatherMe();
-    // console.log("Loaded inside: " + geoWeatherMe.unit);
-
   }
 </script>
 <script>
@@ -291,12 +312,10 @@
       if (geoWeatherMe.unit == "imperial") {
         geoWeatherMe.unit = "metric";
         geoWeatherMe();
-        // console.log("Loaded outsideC: " + geoWeatherMe.unit);
       }
       else {
         geoWeatherMe.unit = "imperial";
         geoWeatherMe();
-        // console.log("Loaded outsideF: " + geoWeatherMe.unit);
       }
     });
   });
